--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - "main"
-      - "dev-*"
+      - "feature/**"
 
 jobs:
   build:
@@ -14,9 +14,6 @@ jobs:
       contents: "read"
       id-token: "write"
       packages: "write"
-
-    outputs:
-      upload_url: ${{ steps.extract-manifest-url.outputs.upload_url }}
 
     steps:
       - uses: "actions/checkout@v4"
@@ -34,37 +31,11 @@ jobs:
       - name: "Build application"
         run: "npm run build"
 
-#      - id: cdn-upload
-#        uses: navikt/frontend/actions/cdn-upload/v1@main
-#        with:
-#          cdn-team-name: mitt-team-navn
-#          source: ./dist/
-#          destination: "pam-min-side-microfrontend"
-
-      - name: "Extract manifest url"
-        id: extract-manifest-url
-        run: |
-          files="${{ steps.cdn-upload.outputs.uploaded }}"
-          first_file=$(echo $files | cut -d',' -f1)
-          echo "upload_url=https://cdn.nav.no/$first_file" >> $GITHUB_OUTPUT
-
-#  update-manifest-dev-gcp:
-#    uses: navikt/tms-deploy/.github/workflows/oppdater-mikrofrontend-manifest-v2.yaml@main
-#    needs: build
-#    with:
-#      cluster: dev-gcp
-#      id: "pam-min-side-microfrontend"
-#      url: ${{needs.build.outputs.upload_url}}
-#      commitmsg: ${{ github.event.head_commit.message}}
-#    secrets: inherit
-
-#  update-manifest-prod-gcp:
-#    if: github.ref == 'refs/heads/main'
-#    uses: navikt/tms-deploy/.github/workflows/oppdater-mikrofrontend-manifest-v2.yaml@main
-#    needs: build
-#    with:
-#      cluster: prod-gcp
-#      id: "pam-min-side-microfrontend"
-#      url: ${{needs.build.outputs.upload_url}}
-#      commitmsg: ${{ github.event.head_commit.message}}
-#    secrets: inherit
+      - name: Upload static files to CDN
+        uses: nais/deploy/actions/cdn-upload/v2@master
+        with:
+          team: teampam
+          source: ./dist/
+          destination: "pam-min-side-microfrontend"
+          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
+          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
