Legger inn manifest push

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -15,6 +15,9 @@ jobs:
       id-token: "write"
       packages: "write"
 
+    outputs:
+      upload_url: ${{ steps.extract-manifest-url.outputs.upload_url }}
+
     steps:
       - uses: "actions/checkout@v4"
       - uses: "actions/setup-node@v4"
@@ -31,11 +34,46 @@ jobs:
       - name: "Build application"
         run: "npm run build"
 
-      - name: Upload static files to CDN
+      - name: cdn-upload
+        id: cdn-upload
         uses: nais/deploy/actions/cdn-upload/v2@master
         with:
+            team: teampam
+            source: ./dist/
+            destination: "pam-min-side-microfrontend"
+            identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+            project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
+
+      - name: Extract manifest url
+        id: extract-manifest-url
+        run: |
+          files="${{ steps.cdn-upload.outputs.uploaded }}"
+          first_file=$(echo $files | cut -d',' -f1)
+          echo "url=https://cdn.nav.no/$first_file" >> $GITHUB_OUTPUT
+
+      - name: Build and push docker image
+        uses: nais/docker-build-push@v0
+        id: docker-build-push
+        with:
           team: teampam
-          source: ./dist/
-          destination: "pam-min-side-microfrontend"
-          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
+
+  update-manifest-dev:
+    needs: build
+    uses: navikt/tms-deploy/.github/workflows/oppdater-mikrofrontend-manifest-v2.yaml@main
+    with:
+      cluster: dev-gcp
+      id: "pam-min-side-microfrontend"
+      url: ${{needs.build.outputs.cdn_url}}
+    secrets: inherit
+
+  update-manifest-prod:
+    if: github.ref == 'refs/heads/main'
+    needs: build
+    uses: navikt/tms-deploy/.github/workflows/oppdater-mikrofrontend-manifest-v2.yaml@main
+    with:
+      cluster: prod-gcp
+      id: "pam-min-side-microfrontend"
+      url: ${{needs.build.outputs.cdn_url}}
+    secrets: inherit
