--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -34,15 +34,12 @@ jobs:
       - name: "Build application"
         run: "npm run build"
 
-      - name: cdn-upload
-        id: cdn-upload
-        uses: nais/deploy/actions/cdn-upload/v2@master
+      - id: cdn-upload
+        uses: navikt/frontend/actions/cdn-upload/v1@main
         with:
-            team: teampam
-            source: ./dist/
-            destination: "pam-min-side-microfrontend"
-            identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
-            project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
+          cdn-team-name: mitt-team-navn
+          source: ./dist/
+          destination: "tms-microfrontend-template"
 
       - name: Extract manifest url
         id: extract-manifest-url
@@ -50,14 +47,6 @@ jobs:
           files="${{ steps.cdn-upload.outputs.uploaded }}"
           first_file=$(echo $files | cut -d',' -f1)
           echo "url=https://cdn.nav.no/$first_file" >> $GITHUB_OUTPUT
-
-#      - name: Build and push docker image
-#        uses: nais/docker-build-push@v0
-#        id: docker-build-push
-#        with:
-#          team: teampam
-#          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
-#          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
 
   update-manifest-dev:
     needs: build
