--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -48,7 +48,7 @@ jobs:
         run: |
           files="${{ steps.cdn-upload.outputs.uploaded }}"
           first_file=$(echo $files | cut -d',' -f1)
-          echo "url=https://cdn.nav.no/$first_file" >> $GITHUB_OUTPUT
+          echo "upload_url=https://cdn.nav.no/$first_file" >> $GITHUB_OUTPUT
 
   update-manifest-dev:
     needs: build
@@ -56,7 +56,7 @@ jobs:
     with:
       cluster: dev-gcp
       id: "pam-min-side-microfrontend"
-      url: ${{needs.build.outputs.cdn_url}}
+      url: ${{needs.build.outputs.upload_url}}
     secrets: inherit
 #
 #  update-manifest-prod:
@@ -66,5 +66,5 @@ jobs:
 #    with:
 #      cluster: prod-gcp
 #      id: "pam-min-side-microfrontend"
-#      url: ${{needs.build.outputs.cdn_url}}
+#      url: ${{needs.build.outputs.upload_url}}
 #    secrets: inherit
