--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "lint": "eslint --fix --ext .ts,.tsx,.js,.jsx ."
   },
   "dependencies": {
-    "@navikt/nav-dekoratoren-moduler": "2.1.6",
     "@navikt/ds-css": "5.7.3",
     "@navikt/ds-react": "5.7.3",
+    "@navikt/nav-dekoratoren-moduler": "2.1.6",
+    "@types/node": "^22.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
